[package]
name = "lsmdb"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tempdir = "0.3.7"
anyhow = "1.0"
criterion = "0.5.1"

[dependencies]
assert_unordered = "0.3.5"
memmap2 = "0.9.0"
pretty_assertions = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempdir = "0.3.7"
thiserror = "1.0.44"

[[bench]]
name = "bench"
harness = false
